--- a/todo_project/todoapp/templates/register.html
+++ b/todo_project/todoapp/templates/register.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS -->
     <!-- https://cdnjs.com/libraries/twitter-bootstrap/5.0.0-beta1 -->
     <link
       rel="stylesheet"
